// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput component renders 1`] = `
@media  {
  .c-cHbqOs {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-cHbqOs:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-cHbqOs[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-cHbqOs::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-cNcGUX::-webkit-search-decoration,
  .c-cNcGUX::-webkit-search-cancel-button,
  .c-cNcGUX::-webkit-search-results-button,
  .c-cNcGUX input[type="search"]::-webkit-search-results-decoration {
    display: none;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hvMhuR {
    color: var(--colors-tonal300);
    position: absolute;
    pointer-events: none;
  }
}

@media  {
  .c-cHbqOs-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hvMhuR-koUlob-size-md {
    right: 10px;
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-PJLV-ieFlhpX-css {
    position: relative;
    height: max-content;
  }

  .c-cNcGUX-icRYcAH-css {
    padding-right: var(--space-6);
  }

  .c-hvMhuR-icDTsBU-css {
    height: 20px;
    width: 20px;
    top: 50%;
    transform: translateY(-50%);
  }
}

<div>
  <div
    class="c-PJLV c-PJLV-ieFlhpX-css"
  >
    <input
      class="c-cHbqOs c-cHbqOs-fwoCmE-size-md c-cNcGUX c-cNcGUX-icRYcAH-css"
      type="search"
      value=""
    />
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-hvMhuR c-hvMhuR-koUlob-size-md c-hvMhuR-icDTsBU-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.412 14.412 20 20"
      />
      <circle
        cx="10"
        cy="10"
        r="6"
      />
    </svg>
  </div>
</div>
`;

exports[`SearchInput component renders clear button when non-empty defaultValue 1`] = `
@media  {
  .c-cHbqOs {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-cHbqOs:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-cHbqOs[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-cHbqOs::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-cNcGUX::-webkit-search-decoration,
  .c-cNcGUX::-webkit-search-cancel-button,
  .c-cNcGUX::-webkit-search-results-button,
  .c-cNcGUX input[type="search"]::-webkit-search-results-decoration {
    display: none;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hvMhuR {
    color: var(--colors-tonal300);
    position: absolute;
    pointer-events: none;
  }

  .c-iPabyW {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-iPabyW[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}
}

@media  {
  .c-cHbqOs-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hvMhuR-koUlob-size-md {
    right: 10px;
    height: 20px;
    width: 20px;
  }

  .c-iPabyW-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }
}

@media  {
  .c-iPabyW-hXLsaq-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-iPabyW-hXLsaq-cv:not(:disabled):hover,
  .c-iPabyW-hXLsaq-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-iPabyW-hXLsaq-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }
}

@media  {
  .c-PJLV-ieFlhpX-css {
    position: relative;
    height: max-content;
  }

  .c-cNcGUX-icRYcAH-css {
    padding-right: var(--space-6);
  }

  .c-hvMhuR-icDTsBU-css {
    height: 20px;
    width: 20px;
    top: 50%;
    transform: translateY(-50%);
  }

  .c-iPabyW-igyKUXm-css {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: var(--space-1);
  }
}

<div>
  <div
    class="c-PJLV c-PJLV-ieFlhpX-css"
  >
    <input
      class="c-cHbqOs c-cHbqOs-fwoCmE-size-md c-cNcGUX c-cNcGUX-icRYcAH-css"
      type="search"
      value="testingWhenDefaultValue"
    />
    <button
      aria-label="clearWhenDefaultValue"
      class="c-iPabyW c-iPabyW-PrXKS-size-md c-iPabyW-hXLsaq-cv c-iPabyW-igyKUXm-css c-PJLV"
      data-state="closed"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6.343 6.343 11.314 11.314m-11.314 0L17.657 6.343"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`SearchInput component renders lg size 1`] = `
@media  {
  .c-cHbqOs {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-cHbqOs:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-cHbqOs[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-cHbqOs::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-cNcGUX::-webkit-search-decoration,
  .c-cNcGUX::-webkit-search-cancel-button,
  .c-cNcGUX::-webkit-search-results-button,
  .c-cNcGUX input[type="search"]::-webkit-search-results-decoration {
    display: none;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hvMhuR {
    color: var(--colors-tonal300);
    position: absolute;
    pointer-events: none;
  }

  .c-iPabyW {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-iPabyW[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}
}

@media  {
  .c-cHbqOs-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hvMhuR-koUlob-size-md {
    right: 10px;
    height: 20px;
    width: 20px;
  }

  .c-iPabyW-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-cHbqOs-jAZHIx-size-lg {
    height: var(--sizes-5);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }

  .c-hvMhuR-koUlob-size-lg {
    right: 10px;
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-PJLV-ieFlhpX-css {
    position: relative;
    height: max-content;
  }

  .c-cNcGUX-icRYcAH-css {
    padding-right: var(--space-6);
  }

  .c-hvMhuR-icDTsBU-css {
    height: 20px;
    width: 20px;
    top: 50%;
    transform: translateY(-50%);
  }

  .c-iPabyW-igyKUXm-css {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: var(--space-1);
  }
}

<div>
  <div
    class="c-PJLV c-PJLV-ieFlhpX-css"
  >
    <input
      class="c-cHbqOs c-cHbqOs-jAZHIx-size-lg c-cNcGUX c-cNcGUX-icRYcAH-css"
      type="search"
      value=""
    />
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-hvMhuR c-hvMhuR-koUlob-size-lg c-hvMhuR-icDTsBU-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.412 14.412 20 20"
      />
      <circle
        cx="10"
        cy="10"
        r="6"
      />
    </svg>
  </div>
</div>
`;
